# Parma

./: .codeclimate.yml  .env  .env.sample  .gitignore  Dockerfile  Makefile  Procfile  README.md  comands  db.sqbpro  db.sqlite  db.sqlite3  db.sqlite_copy1  git_help  help_linux  help_my.txt  my_test.py  pyproject.toml  requirements.txt  resolve_dotenv  setup.cfg  some
.github/workflows/: hexlet-check.yml  test..yml  test.yml  test1.yml
fixtures/: initial_data.json  labels.json  one_status.json  one_task.json  one_user.json  statuses.json  tasks.json  users.json
home/: apps.py
labels/: admin.py  apps.py  mixins.py  models.py  tests.py  urls.py  views.py
my_folder/: 1test  1test_django_models  Example template  com.txt  comands.txt  crud  my_test.py  oop_values  orm_lesson.txt  resolve_dotenv
my_folder/oop/: @property.py  (+18 more)
overtimes/: admin.py  apps.py  mixins.py  models.py  urls.py  views.py
piece_of_iron/: apps.py  urls.py  views.py
products/: admin.py  filters.py  mixins.py  models.py  service.py  urls.py  views.py
statuses/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/: mixins.py  my_test.py  settings.py  urls.py  views.py
tasks/: admin.py  apps.py  filters.py  mixins.py  models.py  tests.py  urls.py  views.py
tools/: mixins.py  models.py  urls.py  views.py
users/: admin.py  apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
workdays/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
workplaces/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
(+157 files in other folders)
